--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/327a0d490c.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap&subset=latin-ext"
         rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet"> -->
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -24,7 +25,7 @@
 
         <div class="todo-list">
             <h3>Lista zadań:</h3>
-            <p class="todo-list__alert-info">Brak zadań na liście.</p>
+            <p class="todo-list__alert-info"></p>
             <ul>
                 <li id="todo-list__test">Wypić kawę <div class="todo-list__tools">
                         <button class="todo-list__complete"><i class="fas fa-check"></i></button>
