--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ToDo List</title>
     <script src="https://kit.fontawesome.com/327a0d490c.js" crossorigin="anonymous"></script>
-    <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap&subset=latin-ext"
-        rel="stylesheet"> -->
-    <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -19,24 +17,24 @@
     <div class="todo">
         <div class="header">
             <h1 class='header__title'>ToDo List</h1>
-            <input type="text" class="header__todo-input" placeholder="Wpisz treść zadania...">
+            <input type="text" class="header__todo-input" placeholder="Enter the content of the task...">
             <button class="header__add-btn">Add</button>
         </div>
 
         <div class="todo-list">
-            <h3>Lista zadań</h3>
+            <h3>Task list</h3>
             <p class="todo-list__alert-info"></p>
             <ul></ul>
         </div>
     </div>
 
     <div class="popup">
-        <h3 class='popup__editTask'>Edytuj zadanie</h3>
+        <h3 class='popup__editTask'>Edit task</h3>
         <div class="popup__popup-body">
             <p class="popup__popup-info"></p>
-            <input type="text" class="popup__popup-input" placeholder="Wprowadź nową treść zadania...">
-            <button class="popup__popup-btn accept">Zatwierdź</button>
-            <button class="popup__popup-btn cancel">Anuluj</button>
+            <input type="text" class="popup__popup-input" placeholder="Enter new task content...">
+            <button class="popup__popup-btn accept">Confirm</button>
+            <button class="popup__popup-btn cancel">Cancel</button>
         </div>
     </div>
 
